--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
     "streamifier": "^0.1.1"
   },
